@@ -4,6 +4,10 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04j: *********************************
 
+BUG: (4/20/06, GVG) Inconsistent cell displayed after undo that deletes that cell (Bug #927)
+FIX: Extra code in UderInterfaceMain.firePropertyChange to clean current cells in WindowFrame if they are not
+longer linked.
+
 BUG: (4/18/06, GVG) SPICE template for CCVS fixed (reported by Ian).
 
 IMP: (4/18/06, GVG) More changes in DRC dates.
